--- a/Project.toml
+++ b/Project.toml
@@ -15,6 +15,7 @@ Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 ADNLPModels = "0.1"
 NLPModels = "0.14"
 SolverTools = "0.4"
+julia = "1.3"
 
 [extras]
 SolverTools = "b5612192-2639-5dc1-abfe-fbedd65fab29"
