--- a/Project.toml
+++ b/Project.toml
@@ -12,13 +12,12 @@ SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [compat]
-ADNLPModels = "0.1"
-NLPModels = "0.14"
-SolverTools = "0.4"
+ADNLPModels = "0.2"
+NLPModels = "0.15"
 julia = "1.3"
 
 [extras]
-SolverTools = "b5612192-2639-5dc1-abfe-fbedd65fab29"
+SolverCore = "ff4d7338-4cf1-434d-91df-b86cb86fb843"
 
 [targets]
-test = ["SolverTools"]
+test = ["SolverCore"]
