--- a/Project.toml
+++ b/Project.toml
@@ -12,8 +12,8 @@ SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [compat]
-ADNLPModels = "0.2"
-NLPModels = "0.15"
+ADNLPModels = "0.2, 0.3"
+NLPModels = "0.15, 0.16, 0.17"
 julia = "1.3"
 
 [extras]
