--- a/Project.toml
+++ b/Project.toml
@@ -8,12 +8,16 @@ ADNLPModels = "54578032-b7ea-4c30-94aa-7cbd1cce6c9a"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Logging = "56ddb016-857b-54e1-b83d-db4d58db5568"
 NLPModels = "a4795742-8479-5a88-8948-cc11e1c8c1a6"
+QuadraticModels = "f468eda6-eac5-11e8-05a5-ff9e497bcd19"
+RipQP = "1e40b3f8-35eb-4cd8-8edd-3e515bb9de08"
 SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [compat]
-ADNLPModels = "0.2, 0.3"
-NLPModels = "0.15, 0.16, 0.17, 0.18"
+ADNLPModels = "0.3"
+NLPModels = "0.18"
+QuadraticModels = "0.7"
+RipQP = "0.3"
 julia = "1.6"
 
 [extras]
