--- a/Project.toml
+++ b/Project.toml
@@ -15,7 +15,7 @@ Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [compat]
 ADNLPModels = "0.3"
-NLPModels = "0.18"
+NLPModels = "0.18, 0.19"
 QuadraticModels = "0.7"
 RipQP = "0.3"
 julia = "1.6"
