--- a/docs/Project.toml
+++ b/docs/Project.toml
@@ -1,5 +1,11 @@
 [deps]
+DCISolver = "bee2e536-65f6-11e9-3844-e5bb4c9c55c9"
 Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
+JSOSolvers = "10dff2fc-5484-5881-a0e0-c90441020f8a"
+SolverTest = "4343dc35-3317-4c6e-8877-f0cc8502c90e"
+Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [compat]
 Documenter = "0.26"
+JSOSolvers = "0.11"
+DCISolver = "0.4"
