--- a/Project.toml
+++ b/Project.toml
@@ -1,6 +1,6 @@
 name = "SolverTest"
 uuid = "4343dc35-3317-4c6e-8877-f0cc8502c90e"
-version = "0.3.12"
+version = "0.3.13"
 
 [deps]
 ADNLPModels = "54578032-b7ea-4c30-94aa-7cbd1cce6c9a"
@@ -13,10 +13,10 @@ SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [compat]
-ADNLPModels = "0.3, 0.4, 0.5, 0.6, 0.7"
-NLPModels = "0.18, 0.19, 0.20, 0.21"
-QuadraticModels = "0.7, 0.8, 0.9"
-RipQP = "0.3, 0.4, 0.5, 0.6"
+ADNLPModels = "0.8.4"
+NLPModels = "0.21"
+QuadraticModels = "0.9"
+RipQP = "0.6"
 julia = "1.6"
 
 [extras]
