--- a/Project.toml
+++ b/Project.toml
@@ -9,6 +9,7 @@ Logging = "56ddb016-857b-54e1-b83d-db4d58db5568"
 NLPModels = "a4795742-8479-5a88-8948-cc11e1c8c1a6"
 QuadraticModels = "f468eda6-eac5-11e8-05a5-ff9e497bcd19"
 RipQP = "1e40b3f8-35eb-4cd8-8edd-3e515bb9de08"
+SolverCore = "ff4d7338-4cf1-434d-91df-b86cb86fb843"
 SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
@@ -17,10 +18,11 @@ ADNLPModels = "0.3, 0.4, 0.5, 0.6, 0.7, 0.8"
 NLPModels = "0.18, 0.19, 0.20, 0.21"
 QuadraticModels = "0.7, 0.8, 0.9"
 RipQP = "0.3, 0.4, 0.5, 0.6"
+SolverCore = "0.3"
 julia = "1.6"
 
 [extras]
-SolverCore = "ff4d7338-4cf1-434d-91df-b86cb86fb843"
+NLPModelsTest = "7998695d-6960-4d3a-85c4-e1bceb8cd856"
 
 [targets]
-test = ["SolverCore"]
+test = ["NLPModelsTest"]
