--- a/Project.toml
+++ b/Project.toml
@@ -17,7 +17,7 @@ Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 ADNLPModels = "0.3, 0.4, 0.5, 0.6, 0.7, 0.8"
 NLPModels = "0.18, 0.19, 0.20, 0.21"
 QuadraticModels = "0.7, 0.8, 0.9"
-RipQP = "0.3, 0.4, 0.5, 0.6"
+RipQP = "0.3, 0.4, 0.5, 0.6, 0.7"
 SolverCore = "0.3"
 julia = "1.6"
 
